tests/steps/deploy/k8s/chart/templates/ingress-https-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    name: dockertest
    app.kubernetes.io/version: pr-1234
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dockertest
    app.kubernetes.io/instance: dockertest
    maintainers: Marketplace.Energy_Trading
    maintainer: Marketplace
    version: '1234'
    revision: 2ad3293a7675d08bc037ef0846ef55897f38ec8f
  name: dockertest
spec:
  routes:
  - kind: Rule
    match: Host(`payments-{PR-NUMBER}.test.vdbinfra.nl`)
    services:
    - name: dockertest
      kind: Service
      port: 123
    middlewares:
    - name: dockertest-ingress-0-whitelist
  - kind: Rule
    match: Host(`some.other.host.com`)
    services:
    - name: dockertest
      kind: Service
      port: 123
    middlewares:
    - name: dockertest-ingress-1-whitelist
