tests/steps/deploy/k8s/chart/templates/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: This is a test container. For testing the MPL pipelines, not to be
      deployed anywhere.
  labels:
    name: dockertest
    maintainers: Marketplace.Energy_Trading
    maintainer: Marketplace
    version: '1234'
    revision: 2ad3293a7675d08bc037ef0846ef55897f38ec8f
  name: dockertest
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: dockertest
      app.kubernetes.io/name: dockertest
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: dockertest
        maintainers: Marketplace.Energy_Trading
        maintainer: Marketplace
        version: '1234'
        revision: 2ad3293a7675d08bc037ef0846ef55897f38ec8f
      name: dockertest
    spec:
      containers:
      - env:
        - name: SOME_ENV
        image: dockertest:pr-1234
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 99
          httpGet: /health
          periodSeconds: 30
          successThreshold: 0
          timeoutSeconds: 20
        name: dockertest
        ports:
        - containerPort: 8080
          hostPort: 8080
          protocol: TCP
      serviceAccount: dockertest
      serviceAccountName: dockertest
